[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/mission failed.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Kenney_alarm.ogg" type="AudioStream" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 0.196078 )

[node name="Mission failed" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_lights" type="Timer" parent="."]

[node name="Timer_sounds" type="Timer" parent="."]
wait_time = 2.0

[node name="Audio_alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer_lights" to="." method="_on_Timer_lights_timeout"]
[connection signal="timeout" from="Timer_sounds" to="." method="_on_Timer_sounds_timeout"]
